8361613: System.console() should only be available for interactive terminal
Reviewed-by: jlahoda, smarks, alanb